[package]
name = "p2p-handshake"
authors = ["eloylp"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.29.2"
bytes = "1.3.0"
clap = { version = "4.0.26", features = ["derive"] }
futures = "0.3"
tokio = { version = "1.22.0", features = ["full"] }